@@ -1,6 +1,10 @@
 FROM eclipse-temurin:17-jdk-alpine
 VOLUME /tmp
-# Copie le .jar généré par Maven
 COPY target/*.jar app.jar
-# Exécute l'application
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java", \
+  "--add-opens=java.base/java.nio=ALL-UNNAMED", \
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED", \
+  "--add-opens=java.base/java.lang=ALL-UNNAMED", \
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED", \
+  "--add-opens=java.base/java.io=ALL-UNNAMED", \
+  "-jar", "/app.jar"]
